[package]
name = "mdbook-latex-pdf"
version = "0.1.1"
edition = "2021"

[features]
default = ["latex", "pdf"]
latex = []
pdf = ["latex", "tectonic", "tectonic_bridge_core"]

[dependencies]
anyhow = "1.0.75"
mdbook = "0.4.35"
pulldown-cmark = "0.9.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
tectonic = { version = "0.14.1", optional = true }
tectonic_bridge_core = { version = "0.4.0", optional = true }
regex = "1.10.2"
clap = "4.4.8"
walkdir = "2.4.0"
resvg = "0.36.0"
Inflector = "0.11.4"
usvg = "0.36.0"
tiny-skia = "0.11.2"
serde_json = "1.0.108"
structopt = "0.3.26"
html5ever = "0.26.0"
markup5ever = "0.11.0"
tendril = "0.4.3"
